--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,46 @@
-.text-center {
-    text-align: center;
+body {
+    background-color: #171719;
+}
+
+main {
+    border-radius: 20px;
+    background-color: #fff;
+    max-width: 800px;
+    margin: 100px auto;
+    padding: 2.5em;
+    box-sizing: border-box;
 }
 
 figure {
-    margin: 0;
+    margin: 0 0 20px 0;
 }
 
 img {
     width: 100%;
+    border-radius: 20px;
+}
+
+.colour-block {
+    background-color: pink;
+    border-radius: 20px;
+    padding: 1em 2em;
+    margin-block-end: 2em;
+}
+
+.border-bottom {
+    border-block-end: 1px solid lightgray;
+    margin-block-end: 2em;
+}
+
+.inline-info {
+    border-inline-end: 1px solid lightgray;
+    padding-inline: 8px;
+}
+
+.inline-info:first-child {
+    padding-inline-start: 0;
+}
+
+.inline-info:last-child {
+    border: 0;
 }
