--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ body {
     background-color: #171719;
 }
 
+a {
+    color: darkblue;
+}
+
 main {
     border-radius: 20px;
     background-color: #fff;
